<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Easy Food</string>
    <string name="currency">\u00a3</string>
    <string name="facebook_app_id">535154387295634</string>
    <string name="fb_login_protocol_scheme">fb535154387295634</string>
    <string name="geo_api_key">AIzaSyBOkNBvcKrG2iwG6b1kP2-fIBOzHZjfqFM</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="please_enter_your_email_address_below_to_reveive_an_email_instruction_for_resetting_your_password">Please enter your email \naddress below to receive an\nemail instruction for resetting\nyour password.</string>
    <string name="email">Email</string>
    <string name="email_required">Email (required)</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">Cancel</string>
    <string name="sorry_we_don_t_currently_deliver_in_your_area">Sorry, we don’t currently deliver in your area</string>
    <string name="add_note">Add note</string>
    <string name="No_items_added">No items added</string>
    <string name="your_basket_is_empty_add_items_to_your_order_before_accessing_your_basket">Your basket is empty. Please add items to you order to view your basket</string>
    <string name="are_you_sure_you_want_to_remove_this_address">Are you sure, you want to remove this address?</string>
    <string name="voucher_code_n_has_now_expired">Voucher code has now expired</string>
    <string name="unfortunately_discount_code_has_expired_please_try_again_with_a_valid_code">Unfortunately [Discount Code] has expired. Please try again with a valid code.</string>
    <string name="voucher_code_is_invalid">Voucher code is invalid</string>
    <string name="unfortunately_discount_code_is_invalid_please_try_again_with_a_valid_code">Unfortunately [Discount Code] is invalid. Please try again with a valid code.</string>
    <string name="voucher_code_has_been_accepted">Voucher code has been accepted</string>
    <string name="great_discount_code_has_been_accepted_and_applied_to_your_order">Great! [Discount Code] has been accepted and applied to your order.</string>
    <string name="are_you_sure_you_want_to_remove_this_favourite">Are you sure, you \n want to remove?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_allergy_or_intolerance_information">Food allergy or\nintolerance information</string>
    <string name="tab_to_call">Tap to Call</string>
    <string name="unfortunately_your_order_was_rejected_by_the_restaurant">Unfortunately your order was rejected by the restaurant</string>
    <string name="search_again">Search again</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="cardno">XXXX    XXXX     XXXX   8990</string>
    <string name="dialog_header">Your first easyFood order</string>
    <string name="dialog_des">Your first easyFood order</string>
    <string name="location_header">Enable current location</string>
    <string name="signup">Sign Up</string>
    <string name="pin">Enter 4 digital code</string>
    <string name="pass">Create password</string>
    <string name="re_pass">Re-enter password</string>
    <string name="search">Search by postcode</string>
    <string name="home">Home</string>
    <string name="allow_des">To make finding local restaurants easiler and to bring you the best deals we would like to use your current location</string>
    <string name="sign_up_dis">Please check your text messages for phone number ending 2863 and enter the vaification code</string>
    <string name="dis">For your security, yBecause you are placing your first order with us, you are required to pay for this by debit or credit card.\n
This is only required for your first order and any furture orders may be paid in cash.\n
This is a security measure to protect both parties from fraudulent orders.

ou will be sent a varification code to your mobile </string>
    <string name="internetdes">The page you are looking for is temporarily unavailable</string>
    <string name="oops_string">Oops something went wrong!</string>
    <string name="close">Close</string>
    <string name="your_meal_is_now_on_it_s_way_to_you_and_will_be_with_you_very_soon">Your meal is now on it’s way to you and will be with you very soon.</string>
    <string name="order_status">Your order is on the way</string>
    <string name="accepted">Accepted</string>
    <string name="prepared">Preparing</string>
    <string name="on_the_way">On the way</string>
    <string name="delivered">Delivered</string>
    <string name="call_restaurant">Call restaurant</string>
    <string name="order_progress">Your order progress</string>
    <string name="dont_recive">Didn’t receive it? Send again</string>
    <string name="my_saved_cards">My Saved Cards</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="currently_you_have_no_cards_saved_add_your_debit_or_credit_cardsfor_faster_payments">You have no payment cards saved.\nAdd your debit or credit cards\nfor faster payments.</string>
    <string name="add_new_card">Add New Card</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="billing_postcode">Billing Postcode</string>
    <string name="cvc">CVC</string>
    <string name="expiry_date">Expiry date</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password_reset">Forgot password? Reset</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="don_t_have_an_account_create_account">Don’t have an account? Create Account</string>
    <string name="spencer_easyfood_co_uk">spencer@easyfood.co.uk</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="click_the_link_below_to_review_our_privacy_policy_regarding_the_collection_of_device_information_in_connection_with_the_use_of_this_app">Click the link below to review our Privacy Policy regarding the collection of device information in connection with the use of this app.</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="forgat_pass">Forgot Password</string>
    <string name="pound">\u00a3</string>
    <string name="easyfood_will_receive_your_name_and_email_address">easyFood will receive: your name and email address.</string>
    <string name="easyfood">easyFood</string>
    <string name="continue_as_spencer">Continue as Spencer</string>
    <string name="do_you_have_an_allergy_tap_for_info">Do you have an allergy? Tap for info</string>
    <string name="do_you_want_to_remove_those_and_start_a_new_order_with">Do you want to remove those and start a new order with</string>
    <string name="big_burger">Big Burger</string>
    <string name="total">TOTAL</string>
    <string name="checkout_now">Checkout now</string>
    <string name="room_for_more">Room for more?</string>
    <string name="frank_s_hot_sauce_chicken_wings_3_x_fried_chicken_wings_in_franks_hot_sauce">Frank’s Hot Sauce Chicken Wings 3 x fried chicken wings in Franks hot sauce</string>
    <string name="add_voucher_code">Add Voucher Code</string>
    <string name="add_a_note_to_the_restaurant">Add a note to your order</string>
    <string name="collect_from_this_restaurant">Collect from this restaurant</string>
    <string name="view_map">View map</string>
    <string name="your_basket_is_empty">Your basket is empty</string>
    <string name="special_offers">Special Offers</string>
    <string name="add_more_favou">Add More Favourites</string>
    <string name="details">Details</string>
    <string name="order_again">Order again</string>
    <string name="order_summary">Order Summary</string>
    <string name="RestaurantsorCuisine">Restaurants</string>
    <string name="my_account">My Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Manage_Address">Manage Address</string>
    <string name="list_of_addresses">List of Addresses</string>
    <string name="AddNewAddress">Add New Address</string>
    <string name="payments">Payments</string>
    <string name="credit_card">My Credit/Debit Cards</string>
    <string name="add_new_credit_debit_card">Add New Credit/Debit Card</string>
    <string name="my_basket">My Basket</string>
    <string name="my_orders">My Orders</string>
    <string name="favourites">Favourites</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="select_order_type" tools:ignore="ExtraTranslation">Please select order type</string>
    <string name="title_activity_add_new_card">AddNewCardActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">Material is the metaphor.    </string>
    <string name="action_settings">Settings</string>
    <string name="marketing_communicatio_desc">We’d like to send you discount coupons,\nexclusive offers and promotions\nby email, SMS and push notifications.\n\nYou can change these prefrerences\nanytime within this app.</string>
    <string name="empty_favourites_desc">You haven’t added any of your\nfavourite restaurants yet.\n\nOnce you select them, they\nwill appear here.</string>
    <string name="empty_myorder_desc">You haven’t placed any order yet. Your placed orders will appear here.</string>
    <string name="title_activity_restaurant_detail_new">RestaurantDetailNewActivity</string>
    <string name="title_activity_test_scrolling">TestScrollingActivity</string>
    <string name="restaurant_call_details">If you or someone you’re ordering for has a food allergy or intolerance, we recommend you phone the restaurant on </string>
    <string name="order_title_0">Waiting for acceptance</string>
    <string name="order_title_1">Your order has been accepted.</string>
    <string name="order_title_2">Order is preparing</string>
    <string name="order_title_3">Order has been prepared and out for delivery</string>
    <string name="order_title_4">Order has been delivered.</string>
    <string name="restaurent_closed">This restaurant is currently closed </string>
    <string name="restaurent_closed2">This restaurant is closed </string>
    <string name="restaurent_closed3">The restaurant is temporarily closed</string>
    <string name="pre_order_for_later"> Pre-order for later </string>
    <string name="order_title_Details_0">Thank you for placing the order, we will inform you once</string>
    <string name="order_title_Details_1">Your order has been accepted and will take </string>
    <string name="order_title_Details_2">Your order has been accepted and will take </string>
    <string name="order_title_Details_3">Your order is out for delivery and will reach you in  </string>
    <string name="order_title_Details_4">Your order has been delivered. Enjoy your meal.</string>
    <string name="having_no_orders">Having no orders</string>
    <string name="delivery_times">Delivery Times</string>
    <string name="collection_times">Collection Times</string>
    <string name="order_rejected_msg">We’re sorry the restaurant has rejected your order, this may be due the restuarant recieving a high volume of orders. \n\nThere are many restaurants in your area accepting orders. \n\nAgain, we apologise for this inconvenience. Please click below to find an alternative restaurant.</string>
    <string name="restaurant_closed_msg">This restaurant is currently closed.</string>
    <string name="ok">OK</string>
</resources>