<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/cardview"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:adjustViewBounds="true"
        android:background="@drawable/order_rejected" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fm"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/avenir_black"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/unfortunately_your_order_was_rejected_by_the_restaurant"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:fontFamily="@font/avenir_medium"
        android:gravity="center"
        android:padding="@dimen/_40sdp"
        android:text="@string/order_rejected_msg"
        android:textColor="@color/descolor"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:id="@+id/okTv"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/fm"
            android:background="@drawable/rounded_orange"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/search_again"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</LinearLayout>