<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/cardview"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"

        android:layout_marginTop="@dimen/_20sdp"
        android:adjustViewBounds="true"

        android:src="@drawable/empty_basket"

        android:tint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fm"


        android:fontFamily="@font/avenir_black"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/No_items_added"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autoText="true"
        android:fontFamily="@font/avenir_medium"
        android:gravity="center"

        android:text="@string/your_basket_is_empty_add_items_to_your_order_before_accessing_your_basket"
        android:textColor="@color/descolor"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:id="@+id/okTv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/fm"

            android:background="@drawable/rounded_orange"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</LinearLayout>