<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardview"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        >

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/are_you_sure_you_want_to_remove_this_address"
            android:autoText="true"

            android:textColor="@color/descolor"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />



        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fm"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:id="@+id/pay_with_card_tv"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/fm"
                android:background="@drawable/rounded"
                android:fontFamily="@font/avenir_medium"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:id="@+id/cancel_tv"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/fm"

                android:fontFamily="@font/avenir_medium"
                android:gravity="center"
                android:background="@drawable/rounded_orange"
                android:padding="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>
</androidx.core.widget.NestedScrollView>