<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/halfwhitup"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_popup"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#f7f4f4"
            android:fontFamily="@font/avenir_black"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="Restaurant opening time"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/cross_tv"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|end|center_vertical"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/circle_gray"
            android:padding="@dimen/_10sdp"
            android:src="@mipmap/x_copy" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv.day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/avenir_medium"
        android:gravity="center"
        android:inputType="textCapWords"
        android:text=""
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/avenir_medium"
        android:gravity="center"
        android:text="@string/delivery_times"
        android:textColor="@color/orange"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/delivery_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_medium"
        android:gravity="center"
        android:text="- -"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/min_order_for_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/avenir_medium"
        android:gravity="center"
        android:text="minmum order for delivery"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_medium"
        android:gravity="center"
        android:text="@string/collection_times"
        android:textColor="@color/orange"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/collection_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/avenir_medium"
        android:gravity="center"
        android:text="- -"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_orancle_corn_30"
        android:orientation="horizontal"

        >


        <TextView
            android:id="@+id/tv_pre_order_for_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/pre_order_for_later"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

</LinearLayout>
